--- a/README
+++ b/README
@@ -1,9 +1,15 @@
----------------------------------------------------------------
-Polynome - 
-  "letting multiple monome apps play and share nicely together"
+---------------------------------------------------------------------
+ , __       _                                    
+ /|/  \     | |                                   
+  |___/ __  | |        _  _    __   _  _  _    _  
+  |    /  \_|/  |   | / |/ |  /  \_/ |/ |/ |  |/  
+  |    \__/ |__/ \_/|/  |  |_/\__/   |  |  |_/|__/
+                   /|                             
+                   \|                             
 
-Written by Sam Aaron
----------------------------------------------------------------
+  "letting multiple monome apps play and share together, nicely"
+
+---------------------------------------------------------------------
 
 Polynome is a monome driver, extended emulator, switcher and splitter.
 
