--- a/docs/TODO
+++ b/docs/TODO
@@ -15,7 +15,8 @@ So, to test application S:
           i.e. /polynome/internal/test/on "localhost", 1234  ; for internal test mode
   [*]  - Polynome reads from a config file where it should send regular OSC output
   [*]  - A VM for app S is created with the correct model and cable orientation
-  [ ]  - S's VM is placed in the Rack
+  [ ]  - Give each VM its own listener so apps (such as S) can send messages to the VM
+  [*]  - S's VM is placed in the Rack
   [ ]  - S's VM listens for messages
   [ ]  - S sends OSC messages to S's VM
   [ ]  - Polynome filters out Monome messages and sends them to the Monome
