--- a/docs/TODO
+++ b/docs/TODO
@@ -16,6 +16,7 @@ So, to test application S:
   [*]  - Polynome reads from a config file where it should send regular OSC output
   [*]  - A VM for app S is created with the correct model and cable orientation
   [ ]  - Give each VM its own listener so apps (such as S) can send messages to the VM
+  [ ]  - Give each VM its own sender so it can send output to the real monome
   [*]  - S's VM is placed in the Rack
   [ ]  - S's VM listens for messages
   [ ]  - S sends OSC messages to S's VM
@@ -23,6 +24,7 @@ So, to test application S:
   [ ]  - Polynome sends all (including filtered) OSC messages back to S on the appropriate ports
   [ ]  - Polynome sends all filtered messages onto the monome
   [ ]  - Try Polymer with MLR
+  [ ]  - Move the test response code from Rack to OSCListener
 
 It would be useful to build a test harness:
 
