--- a/docs/TODO
+++ b/docs/TODO
@@ -5,9 +5,9 @@ Polynome is in a state where frames can be created and displayed
 [*] a surface switching mechanism which works with the frame buffer (see TECHNICAL_OVERVIEW)
 [*] Move the FrameBuffer into its own class
 [*] Give each monome a Display (which includes a FrameBuffer)
-[ ] Give each monome multiple surfaces
-[ ] Allow a monome to create a new surface
-[ ] Allow a monome to destroy a surface
+[*] Give each monome multiple surfaces
+[*] Allow a monome to create a new surface
+[*] Allow a monome to destroy a surface
 [ ] Allow an interface to register with a given surface
 [ ] Allow an interface to specify its rotation on registration
 [ ] Only permit valid rotations and sizes given the monome's size
