--- a/docs/TODO
+++ b/docs/TODO
@@ -12,6 +12,8 @@ Polynome is in a state where frames can be created and displayed
 [*] Give each application an interface
 [*] Move the cable orientation checks into model
 [*] Teach Quadrants how to return possible quadrants given a cable orientation
+[*] Add Projection skeleton
+[ ] Allow surface quadrants to be mapped to app interface quadrants
 [ ] Allow an app connector to register with a given surface
 [ ] Allow an app connector to specify its rotation on registration
 [ ] Only permit valid rotations and sizes given the monome's size
