Allow frames to output themselves after rotating the appropriate amount

--- a/docs/TODO
+++ b/docs/TODO
@@ -19,7 +19,7 @@ Polynome is in a state where frames can be created and displayed
 [*] Add ability for a projection to determine whether it's on the current surface
 [*] Make cable orientation left the starting (default) orientation for the monome
 [*] Allow frames to store a rotation value, and implement the correct arithmetic
-[ ] Allow frames to output themselves after rotating the appropriate amount
+[*] Allow frames to output themselves after rotating the appropriate amount
 [ ] Allow an app to update the surface
 [ ] Allow interface frame updates be sent via the surface to the display
 [ ] Create a dummy 64 app that updates the buffer with alternating frames
