--- a/docs/TODO
+++ b/docs/TODO
@@ -20,7 +20,10 @@ Polynome is in a state where frames can be created and displayed
 [*] Make cable orientation left the starting (default) orientation for the monome
 [*] Allow frames to store a rotation value, and implement the correct arithmetic
 [*] Allow frames to output themselves after rotating the appropriate amount
-[ ] Allow an app to update the surface
+[*] Allow an app to update the surface
+[ ] Test all fixture frames to see if they're accurate (visibility testing)
+[ ] Test and implement app projection rotation
+[ ] Test and implement monome cable orientation updates
 [ ] Allow interface frame updates be sent via the surface to the display
 [ ] Create a dummy 64 app that updates the buffer with alternating frames
 [ ] Create a dummy 128 app that updates the buffer with alternating frames
