--- a/docs/TODO
+++ b/docs/TODO
@@ -22,10 +22,11 @@ Polynome is in a state where frames can be created and displayed
 [*] Allow frames to output themselves after rotating the appropriate amount
 [*] Allow an app to update the surface
 [*] Test all fixture frames to see if they're accurate (visibility testing)
-[ ] Make cable orientation top the starting (default) orientation for the monome
-[ ] Test and implement app projection rotation
-[ ] Test and implement monome cable orientation updates
-[ ] Allow interface frame updates be sent via the surface to the display
+[*] Make cable orientation top the starting (default) orientation for the monome
+[*] Test and implement app projection rotation
+[*] Test and implement monome cable orientation updates
+[*] Allow interface frame updates be sent via the surface to the display
+[ ] Test projection inversion
 [ ] Create a dummy 64 app that updates the buffer with alternating frames
 [ ] Create a dummy 128 app that updates the buffer with alternating frames
 [ ] Allow the dummy 128 app to be rotated if the device contains a sufficient number of frames
